[package]
name = "socket_hook"
version = "0.1.0"
authors = ["Aursen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.7.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "ws2def", "winsock2", "ws2tcpip"] }
